--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,17 @@ ul,li{
   margin: 0;
   padding: 0;
 }
-
+.bg-nav-trans{
+  background-color: rgba(35, 49, 72, .5);
+}
+.bg-nav-solid{
+  background-color: rgba(35, 49, 72, 1);
+}
 #header-menu{
     padding: 25px 0;
     position: fixed;
     width: 100%;
-    background-color: rgba(35, 49, 72, .5);
+    /* background-color: rgba(35, 49, 72, .5); */
     z-index: 1000;
     transition: all ease .3s;
 }
